[tool.poetry]
name = "pyroughtime"
description = "A Python 3 Roughtime library and command line client"
version = "0.1.0"
license = "GPL-3.0-or-later"
authors = ["Marcus Dansarie <marcus@dansarie.se>"]

[tool.poetry.dependencies]
python = "^3.8"
pycryptodomex = "^3.21.0"

[tool.poetry.scripts]
pyroughtime = 'pyroughtime:main'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
